--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.3.4",
+    "react-native-web-swiper": "^2.2.4",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
