--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "compilerOptions": {
       "target": "esnext",
       "module": "commonjs",
-      "types": ["react-native", "jest"],
+      "types": ["react-native", "jest","styled-components-react-native"],
       "lib": [
         "es2019"
       ],
